--- a/app/build.gradle
+++ b/app/build.gradle
@@ -5,7 +5,7 @@ apply plugin: 'kotlin-android'
 apply plugin: 'kotlin-android-extensions'
 
 android {
-    compileSdkVersion 28
+    compileSdkVersion 30
     compileOptions {
         sourceCompatibility 1.8
         targetCompatibility 1.8
@@ -13,7 +13,7 @@ android {
     defaultConfig {
         applicationId "com.akhilamadari.exoplayer"
         minSdkVersion 21
-        targetSdkVersion 28
+        targetSdkVersion 30
         versionCode 1
         versionName "1.0"
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
@@ -29,17 +29,23 @@ android {
 
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
-    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk8:$kotlin_version"
-    implementation 'com.android.support:appcompat-v7:28.0.0'
-    implementation 'com.android.support.constraint:constraint-layout:1.1.3'
-    implementation 'com.google.android.exoplayer:exoplayer:2.9.6'
+    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk8:1.3.31"
+    implementation 'androidx.appcompat:appcompat:1.3.1'
+    implementation 'com.android.support.constraint:constraint-layout:2.0.4'
+
+    implementation 'com.google.android.exoplayer:exoplayer:2.15.1'
 
     //casting
-    implementation 'com.google.android.exoplayer:extension-cast:2.9.6'
-    implementation  'com.android.support:mediarouter-v7:28.0.0'
-    implementation 'com.android.support:design:28.0.0'
+    implementation 'com.google.android.exoplayer:extension-cast:2.15.1'
+    implementation 'com.google.android.gms:play-services-cast-framework:20.0.0'
+    implementation 'androidx.mediarouter:mediarouter:1.2.5'
+
+    //test
+    androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
+    androidTestImplementation 'com.android.support.test.espresso:espresso-contrib:3.2.0'
+    androidTestImplementation 'androidx.test:runner:1.2.0'
+    androidTestImplementation 'androidx.test:rules:1.2.0'
+    androidTestImplementation 'androidx.test.uiautomator:uiautomator:2.2.0'
     testImplementation 'junit:junit:4.12'
-    androidTestImplementation 'com.android.support.test:runner:1.0.2'
-    androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
 
 }
